# gomoku

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  out2.txt
src/: board.rs  consts.rs  geometry.rs  main.rs  pattern.rs  pattern_search.rs  state.rs  testing.rs  threat_space_search.rs  todos.rs
