[package]
name = "gomoku"
version = "0.1.0"
authors = ["Jaya Kiran Akurathi <Jayakiran.Akurathi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
num = "*"
ndarray = "*"
# rayon = "*"
reduce = "*"
fnv = "*"

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.release]
opt-level = 3
